--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h2>Hello world</h2>
+    <div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium, corporis amet! Maxime natus iusto quae soluta nam eius reprehenderit est, amet facilis veniam!</p>
+        <p>Lorem ipsum dolor sit.</p>
+    </div>
 </body>
 </html>
