--- a/home.html
+++ b/home.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h2>home page</h2>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam enim accusamus adipisci reprehenderit ipsa non.</p>
+    </div>
 </body>
 </html>
