--- a/home.html
+++ b/home.html
@@ -6,10 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>home page</h2>
-    <div>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam enim accusamus adipisci reprehenderit ipsa non.</p>
-    </div>
-    <h1>dev change</h1>
+    <h1>star change</h1>
 </body>
 </html>
